--- a/KarmelCatalys.csproj
+++ b/KarmelCatalys.csproj
@@ -4,6 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <SignAssembly>false</SignAssembly>
+    <AssemblyOriginatorKeyFile>KarmelCatalysRelease.pfx</AssemblyOriginatorKeyFile>
+    <DelaySign>false</DelaySign>
   </PropertyGroup>
 
   <ItemGroup>
