--- a/KarmelCatalys - Backup.csproj
+++ b/KarmelCatalys - Backup.csproj
@@ -7,11 +7,9 @@
     <AssemblyOriginatorKeyFile>KarmelCatalysRelease.pfx</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
     <Authors>Karmel</Authors>
-    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BASS" Version="2.4.12.1" />
     <PackageReference Include="Bass.Net" Version="1.0.0" />
     <PackageReference Include="MessagePack" Version="2.2.85" />
     <PackageReference Include="Pastel" Version="2.1.0" />
@@ -19,8 +17,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="System.Windows.Forms">
-      <HintPath>..\..\..\..\..\Windows\Microsoft.NET\Framework\v4.0.30319\System.Windows.Forms.dll</HintPath>
+    <Reference Include="PresentationCore">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\PresentationCore.dll</HintPath>
+    </Reference>
+    <Reference Include="WindowsBase">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\WindowsBase.dll</HintPath>
     </Reference>
   </ItemGroup>
 
